Update Maven dependencies and documentation